# sound

./: .gitignore  CMakeLists.txt  README.md  ampl_filter.cpp  ampl_filter.h  application.cpp  application.h  args_parser.cpp  args_parser.h  audio_utils.cpp  audio_utils.h  cmd_line_args_2_pipeline_converter.cpp  cmd_line_args_2_pipeline_converter.h  filter.h  filter_producers.cpp  filter_producers.h  filters.cpp  filters.h  generator_filter.cpp  generator_filter.h  lowpass_filter.cpp  lowpass_filter.h  main.cpp  normalize_filter.cpp  normalize_filter.h  pipeline.cpp  pipeline.h  silence_filter.cpp  silence_filter.h  timestretch_filter.cpp  timestretch_filter.h  wav_file.cpp  wav_file.h  waveform.cpp  waveform.h
tests/: unit_tests.cpp
